created validation middleware and created create user endpoint

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@koa/router": "^13.1.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.4",
     "koa-body": "^6.0.1",
